src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  /** @gqlField */
  someProp;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts:4:3 - error: Expected GraphQL field to have an explicitly defined type. Grats needs to be able to see the type of the field to generate a GraphQL schema.

4   someProp;
    ~~~~~~~~
